[gd_scene load_steps=16 format=2]

[ext_resource path="res://HUD_game.gd" type="Script" id=1]
[ext_resource path="res://Juego/vitamins.png" type="Texture" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/reloj.png" type="Texture" id=4]
[ext_resource path="res://Juego/antibodie.png" type="Texture" id=5]
[ext_resource path="res://Juego/bacterias_kills.png" type="Texture" id=6]
[ext_resource path="res://Juego/boss_Normal.png" type="Texture" id=7]
[ext_resource path="res://Juego/bala.png" type="Texture" id=8]
[ext_resource path="res://analog/analog.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="HUD_game" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Vitamina" type="TextureRect" parent="."]
visible = false
margin_left = 431.424
margin_top = 10.8792
margin_right = 671.424
margin_bottom = 124.879
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vidas" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 431.769
margin_top = 10.7057
margin_right = 468.769
margin_bottom = 30.7057
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reloj" type="TextureRect" parent="."]
visible = false
margin_left = 377.61
margin_top = 0.576874
margin_right = 1003.61
margin_bottom = 626.577
rect_scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 347.318
margin_top = 9.91889
margin_right = 384.318
margin_bottom = 29.9189
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 2 )
text = "400"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnticuerposPic" type="TextureRect" parent="."]
visible = false
margin_left = 288.973
margin_top = 4.41174
margin_right = 496.973
margin_bottom = 252.412
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anticuerpos" type="Label" parent="."]
visible = false
margin_left = 252.418
margin_top = 11.3445
margin_right = 292.418
margin_bottom = 31.3445
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemigosPic" type="TextureRect" parent="."]
visible = false
margin_left = 215.649
margin_top = 3.25801
margin_right = 727.649
margin_bottom = 515.258
rect_scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemigos" type="Label" parent="."]
visible = false
margin_left = 172.516
margin_top = 9.55649
margin_right = 205.516
margin_bottom = 52.5565
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 4 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VidaBoss" type="Label" parent="."]
visible = false
margin_left = 187.128
margin_top = 9.7155
margin_right = 227.128
margin_bottom = 29.7155
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 3 )
text = "500"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossPic" type="TextureRect" parent="."]
visible = false
margin_left = 239.335
margin_top = -0.814529
margin_right = 477.335
margin_bottom = 237.185
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="Label" parent="."]
visible = false
margin_left = 14.6611
margin_top = 12.2176
margin_right = 78.6611
margin_bottom = 32.2176
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Record:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Valor" type="Label" parent="Record"]
visible = false
margin_left = 95.2496
margin_top = 2.0
margin_right = 139.25
margin_bottom = 22.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordPic" type="TextureRect" parent="."]
visible = false
margin_left = 70.7559
margin_top = 1.629
margin_right = 696.756
margin_bottom = 627.629
rect_scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalasPic" type="TextureRect" parent="."]
visible = false
margin_left = 49.0
margin_top = 5.0
margin_right = 548.0
margin_bottom = 1039.0
rect_scale = Vector2( 0.035, 0.035 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balascant" type="Label" parent="."]
visible = false
margin_left = 12.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 37.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 4 )
text = "35"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Analog" parent="." instance=ExtResource( 9 )]
visible = false
